--- a/reference.bib
+++ b/reference.bib
@@ -25,7 +25,8 @@
     volume = {62},
     pages = {312--318},
     year = {2015},
-    publisher = {Elsevier}
+    publisher = {Elsevier},
+    address = {New York, USA},
 }
 
 @inproceedings{kennard2009separation,
@@ -671,38 +672,72 @@
 }
 
 @inproceedings{bakshi2017microservices,
-    title={Microservices-based software architecture and approaches},
-    author={Bakshi, Kapil},
-    booktitle={Aerospace Conference, 2017 IEEE},
-    pages={1--8},
-    year={2017},
-    organization={IEEE}
+    title = {Microservices-based software architecture and approaches},
+    author = {Bakshi, Kapil},
+    booktitle = {Aerospace Conference, 2017 IEEE},
+    pages = {1--8},
+    year = {2017},
+    organization = {IEEE}
 }
 
 @incollection{boyer2011ibm,
-    title={IBM websphere ilog jrules},
-    author={Boyer, Mr J{\'e}r{\^o}me and Mili, Hafedh},
-    booktitle={Agile business rule development},
-    pages={215--242},
-    year={2011},
-    publisher={Springer},
+    title = {IBM websphere ilog jrules},
+    author = {Boyer, Mr J { \'e } r { \^o } me and Mili, Hafedh},
+    booktitle = {Agile business rule development},
+    pages = {215--242},
+    year = {2011},
+    publisher = {Springer},
     address = {Cham, Switzerland},
 }
 
 @inproceedings{cerny2016survey,
-    title={Survey on concern separation in service integration},
-    author={Cerny, Tomas and Donahoo, Michael J},
-    booktitle={International Conference on Current Trends in Theory and Practice of Informatics},
-    pages={518--531},
-    year={2016},
-    organization={Springer}
+    title = {Survey on concern separation in service integration},
+    author = {Cerny, Tomas and Donahoo, Michael J},
+    booktitle = {International Conference on Current Trends in Theory and Practice of Informatics},
+    pages = {518--531},
+    year = {2016},
+    organization = {Springer}
 }
 
 @inproceedings{papazoglou2003service,
-    title={Service-oriented computing: Concepts, characteristics and directions},
-    author={Papazoglou, Mike P},
-    booktitle={Web Information Systems Engineering, 2003. WISE 2003. Proceedings of the Fourth International Conference on},
-    pages={3--12},
-    year={2003},
-    organization={IEEE}
+    title = {Service-oriented computing: Concepts, characteristics and directions},
+    author = {Papazoglou, Mike P},
+    booktitle = {Web Information Systems Engineering, 2003. WISE 2003. Proceedings of the Fourth International Conference on},
+    pages = {3--12},
+    year = {2003},
+    organization = {IEEE}
+}
+
+@inproceedings{xiao2016reflections,
+    title = {Reflections on SOA and Microservices},
+    author = {Xiao, Zhongxiang and Wijegunaratne, Inji and Qiang, Xinjian},
+    booktitle = {Enterprise Systems (ES), 2016 4th International Conference on},
+    pages = {60--67},
+    year = {2016},
+    organization = {IEEE}
+}
+
+@article{kratzke2017understanding,
+    title = {Understanding cloud-native applications after 10 years of cloud computing-A systematic mapping study},
+    author = {Kratzke, Nane and Quint, Peter-Christian},
+    journal = {Journal of Systems and Software},
+    volume = {126},
+    pages = {1--16},
+    year = {2017},
+    publisher = {Elsevier},
+    address = {New York, USA},
+}
+
+@misc{larman2001patterns,
+    title = {Patterns: An Introduction to Object-Oriented Analysis and Design and the Unified Process},
+    author = {Larman, Craig and Applying, UML},
+    year = {2001},
+    publisher = {Prentice Hall PTR},
+    address = {Upper Saddle River, NJ},
+}
+
+@book{hopcroft1983data,
+    title={Data structures and algorithms},
+    author={Hopcroft, John E and Ullman, Jeffrey D},
+    year={1983}
 }
