--- a/reference.bib
+++ b/reference.bib
@@ -739,5 +739,7 @@
 @book{hopcroft1983data,
     title={Data structures and algorithms},
     author={Hopcroft, John E and Ullman, Jeffrey D},
-    year={1983}
+    year={1983},
+    publisher = {Addison-Wesley Longman Publishing},
+    address = {Boston, MA, USA},
 }
