--- a/content/chapter-05-implementace.tex
+++ b/content/chapter-05-implementace.tex
@@ -25,7 +25,7 @@ která slouž\'{\i} jako běhové prostřed\'{\i} pro jazyk \textit{JavaScript}.
 V\'yběr byl proveden na základě aktuáln\'{\i}ch trendů ve světě softwarového
 inžen\'yrstv\'{\i}~\cite{githut}\cite{octoverse}\cite{stackoverflowsurvey}.
 Tyto jazyky se v posledních letech stabilně umísťují na prvních příčkách
-nejpopulárnějš\'{\i}ch jazyků pro obecné použit\'{\i}.
+nejpopulárnějš\'{\i}ch programovacích jazyků pro obecné použit\'{\i}.
 
 \section{Sd\'{\i}len\'{\i} byznys kontextů mezi službami}
 
@@ -84,8 +84,8 @@ na technologii Protocol Buffers a poskytuje v\'yvojáři
 možnost definovat detailn\'{\i} schéma komunikace pomoc\'{\i}
 protokolu \textit{\gls{RPC}}~\cite{nelson1981remote}.
 Zdrojov\'y kód~\ref{lst:grpc-example} znázorňuje zápis serveru,
-kter\'y umožňuje svému klientovi volat metody \code{FetchContexts()},
-\code{FetchAllContexts()} a \code{UpdateOrSaveContext()}.
+kter\'y umožňuje volat metody \code{FetchContexts},
+\code{FetchAllContexts} a \code{UpdateOrSaveContext}.
 
 \lstinputlisting[
 caption={Definice služby pro komunikaci byznys kontextů pro gRPC},
